...
class Coordinator {
    static let shared = Coordinator()

    public var lastParentVC: UIViewController?

    func start() {
        let skipTo = ProcessInfo.processInfo.environment["SKIP_SPLASH_TO"]
        if skipTo == "Asset" {
            showAsset()
        } else if skipTo == "Wallet" {
            showAsset()
            showWallet()
        } else {
...
