...
            self.tableView.reloadData()
        }
        filterDropDown?.multiSelectionAction = filterSelectionAction
    }

    func createNavBarItem(position: Position) -> UIBarButtonItem {
        let filterButton = UIBarButtonItem(image: UIImage(named: "filter"),
                                           style: .plain,
                                           target: self,
                                           action: #selector(filterAction))

        filterButton.tintColor = UIColor.systemBlack

...
